# broccoli-project

./: .gitignore  .travis.yml  Cargo.toml  README.md  make_dep_graph.sh
analysis/: Cargo.toml
analysis/best-height/src/: lib.rs
analysis/cached-pairs/: Cargo.toml
analysis/cached-pairs/src/: lib.rs
analysis/colfind/: Cargo.toml
analysis/colfind/src/: bench.rs  lib.rs  theory.rs
analysis/demo-web/: Cargo.toml  run.sh
analysis/demo-web/src/: lib.rs  support.rs
analysis/demo-web/src/demos/: intersect_with.rs  knearest.rs  liquid.rs  mod.rs  nbody.rs  original_order.rs  raycast.rs  raycast_debug.rs  rect.rs
analysis/float-vs-integer/src/: lib.rs
analysis/layout/src/: lib.rs
analysis/levels/: Cargo.toml
analysis/levels/src/: levelcounter.rs  leveltimer.rs  lib.rs  splitter.rs
analysis/not-sorted/: Cargo.toml
analysis/not-sorted/src/: lib.rs
analysis/par-tuner/: Cargo.toml
analysis/par-tuner/src/: lib.rs
analysis/plot-gen/: Cargo.toml
analysis/plot-gen/src/: bench.rs  main.rs  theory.rs
analysis/quick-bench/: Cargo.toml
analysis/rebal-vs-query/: Cargo.toml
analysis/rebal-vs-query/src/: lib.rs
analysis/report-legacy/: book.toml  deploy.sh  generate.sh  pack_demo.sh
analysis/report-legacy/data-gen/src/: spiral.rs
analysis/report-legacy/data-gen/src/colfind/: height_heur_comparison.rs
analysis/report-legacy/src/: ch1-broccoli-vs-other.md  ch10-algorithm-in-depth.md  ch2-construction-vs-query.md  ch6-choosing-optimal-height.md  ch8-primitive-types.md  ch9-api-design.md  chxx.md
analysis/report-legacy/src/css/: poloto.css
analysis/report-web/: README  deploy.sh
analysis/report-web/best-height/: Cargo.toml
analysis/report-web/best-height/src/: lib.rs
analysis/report-web/cached-pairs/: Cargo.toml
analysis/report-web/cached-pairs/src/: lib.rs
analysis/report-web/colfind/: Cargo.toml
analysis/report-web/colfind/src/: bench.rs  lib.rs
analysis/report-web/float-vs-integer/: Cargo.toml
analysis/report-web/float-vs-integer/src/: lib.rs
analysis/report-web/layout/: Cargo.toml
analysis/report-web/layout/src/: lib.rs
analysis/report-web/levels/src/: levelcounter.rs  leveltimer.rs  lib.rs  splitter.rs
analysis/report-web/par-tuner/: Cargo.toml  run.sh
analysis/report-web/par-tuner/src/: lib.rs
analysis/report-web/plot-gen/: Cargo.toml
analysis/report-web/plot-gen/src/: main.rs
analysis/report-web/rebal-vs-query/: Cargo.toml
analysis/report-web/rebal-vs-query/src/: lib.rs
analysis/report-web/spiral/: Cargo.toml
analysis/report-web/spiral/src/: lib.rs
analysis/report-web/support/: Cargo.toml
analysis/report-web/support/src/: datanum.rs  lib.rs
analysis/report/data-gen/src/colfind/: parallel_heur_comparison.rs
analysis/report/src/: SUMMARY.md  ch0-analysis-method.md  ch14-general-thoughts.md  ch3-level-analysis.md  ch4-aabb-data-layout.md  ch5-tree-data-layout.md  ch7-parallelism.md  worker.js
analysis/report_gen/: Cargo.toml
analysis/report_gen/src/: main.rs
analysis/spiral/src/: lib.rs
analysis/support/: Cargo.toml
analysis/support/src/: datanum.rs  lib.rs
analysis/sweep/: Cargo.toml
analysis/sweep/src/: lib.rs
broccoli/: Cargo.toml
broccoli-ext/: Cargo.toml  README.md
broccoli-ext/examples/: cachable_pairs.rs  cache-pairs.rs  cacheable_pairs.rs  collect.rs  multi_rect.rs
broccoli-ext/src/: cachable_pairs.rs  cacheable_pairs.rs  lib.rs  multi_rect.rs  trusted_aabb.rs
broccoli-rayon/: Cargo.toml  README.md
broccoli-rayon/examples/: par.rs  par_coll.rs
broccoli-rayon/src/: build.rs  lib.rs
broccoli-rayon/src/queries/: colfind.rs
broccoli-rayon/src/query/: colfind.rs  mod.rs
broccoli-rayon/tests/: test.rs
broccoli-splitter/: Cargo.toml
broccoli-tree/: Cargo.toml  README.md
broccoli-tree/src/: aabb_pin.rs  assert.rs  build.rs  halfpin.rs  lib.rs  node.rs  oned.rs  par.rs  splitter.rs  treepin.rs  util.rs
broccoli-util/: Cargo.toml
broccoli/examples/: cached_key.rs  collision.rs  index.rs  indirection.rs  iter_elem.rs  knearest.rs  owned.rs  raycast.rs  rect.rs
broccoli/src/: assert.rs  build.rs  lib.rs  node.rs  tests.rs  util.rs
broccoli/src/aabb/: mod.rs  pin.rs
broccoli/src/ext/: cacheable_pairs.rs
broccoli/src/queries/: draw.rs  intersect_with.rs  knearest.rs  mod.rs  nbody.rs  raycast.rs  rect.rs  tools.rs
broccoli/src/queries/colfind/: build.rs  handler.rs  mod.rs  oned.rs
broccoli/src/tree/: aabb_pin.rs  assert.rs  build.rs  mod.rs  node.rs  splitter.rs  util.rs
broccoli/tests/: broccoli_test.rs  reproduction.rs  test.rs
broccoli_data/: Cargo.toml  brender.sh
broccoli_demo/: Cargo.toml  readme.md
broccoli_demo/src/: main.rs  support.rs
broccoli_demo/src/demos/: demo_intersect_with.rs  demo_knearest.rs  demo_liquid.rs  demo_multirect.rs  demo_nbody.rs  demo_original_order.rs  demo_raycast_f32.rs  demo_raycast_f32_debug.rs  demo_raycast_grid.rs  mod.rs
broccoli_ext/: cachable_pairs.rs  test.rs
demo/: Cargo.toml
demo-bench/: Cargo.toml  run.sh
demo-par-bench/: Cargo.toml
demo-web/: Cargo.toml
demo/src/: main.rs  support.rs
demo/src/demos/: demo_intersect_with.rs  demo_knearest.rs  demo_liquid.rs  demo_multirect.rs  demo_nbody.rs  demo_nbody2.rs  demo_original_order.rs  demo_raycast_f32.rs  demo_raycast_f32_debug.rs  demo_raycast_grid.rs  mod.rs
demo_web/: Cargo.toml  README.md  index.html
docs/: index.html
examples/: collect.rs  collision.rs  (+15 more)
report/data_gen/: Cargo.toml  test_on_android.sh
report/data_gen/src/: datanum.rs  main.rs  spiral.rs  support.rs
report/data_gen/src/colfind/: colfind.rs  construction_vs_query.rs  dinotree_direct_indirect.rs  float_vs_integer.rs  height_heur_comparison.rs  level_analysis.rs  mod.rs  optimal_query.rs  parallel_heur_comparison.rs  query_evenness.rs  rebal_strat.rs  theory_colfind_3d.rs  tree_direct_indirect.rs
report/data_gen/src/colfind/colfind/: bench.rs  mod.rs  theory.rs
report/data_gen/src/colfind/construction_vs_query/: bench.rs  mod.rs  theory.rs
report/data_gen/src/colfind/level_analysis/: bench.rs  mod.rs  theory.rs
report/data_gen/src/nbody/: mod.rs  theory.rs
(+201 files in other folders)
