[package]
name = "broccoli"
version = "3.3.1"
authors = ["Ken Reed <kenakioreed@gmail.com>"]
description = "broadphase collision detection algorithms"
license = "MIT"
repository = "https://github.com/tiby312/broccoli"
keywords = ["tree", "kdtree","broadphase","space-partitioning","no_std"]
readme = "README.md"
edition = "2018"
include = ["src/**/*", "LICENSE-MIT", "README.md"]


[lib]
doctest = false

[workspace]
members = [ "broccoli-tree","demo-web","report/data-gen","broccoli-ext"]

[dev-dependencies]
dists = {git="https://github.com/tiby312/dists.git"}

[dependencies]
broccoli-tree={version="0.4",default-features=false}
rayon={version="1.5",optional=true}
itertools = "0.10"
compt = "2.0"
axgeom = {version="1.11",default-features = false}
twounordered = "0.7"
slice-group-by = "0.3"
revec = "0.2"

[package.metadata.docs.rs]
# This sets the default target to `x86_64-unknown-linux-gnu`
# and only builds that target
targets = ["x86_64-unknown-linux-gnu"]

#  when using flamegraph
# [profile.release]
# debug = true

[features]
default=["parallel"]
parallel = ["rayon","broccoli-tree/rayon"]



# [patch.crates-io]
# broccoli-tree={path="broccoli-tree"}
# broccoli={path="../broccoli"}