
[workspace]
members = [ "broccoli","analysis/sweep","broccoli-rayon","demo-web","analysis/not-sorted","analysis/cached-pairs","analysis/best-height","analysis/spiral","analysis/float-vs-integer","analysis/rebal-vs-query","analysis/par-tuner","analysis/layout","analysis/support","analysis/plot-gen","analysis/colfind","analysis/levels"]
