
[workspace]
members = [ "sweep","demo-web","not-sorted","report-web/cached-pairs","report-web/best-height","report-web/spiral","report-web/float-vs-integer","report-web/rebal-vs-query","report-web/par-tuner","report-web/layout","report-web/support","report-web/plot-gen","report-web/colfind","report-web/levels"]


[patch."https://github.com/tiby312/shogo"]
shogo = { path = "../../shogo" }

[patch."https://github.com/tiby312/poloto"]
poloto = {path="../../poloto"}

[patch.crates-io]
hypermelon={path="../../hypermelon"}