[package]
name = "broccoli-rayon"
version = "0.4.0"
edition = "2021"
authors = ["Ken Reed <kenakioreed@gmail.com>"]
description = "broadphase collision detection algorithms"
license = "MIT"
repository = "https://github.com/tiby312/broccoli-project"
keywords = ["tree", "kdtree","broadphase","space-partitioning"]
readme = "README.md"
include = ["src/**/*"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dev-dependencies]
dists = {git="https://github.com/tiby312/dists.git"}
axgeom = {version="1.13",default-features = false}


[dependencies]
rayon={version="1.7"}
broccoli={path="../broccoli", version="6.3"}
