[package]
name = "broccoli-tree"
version = "0.1.4"
edition = "2018"
authors = ["Ken Reed <kenakioreed@gmail.com>"]
description = "broadphase collision detection algorithms"
license = "MIT"
repository = "https://github.com/tiby312/broccoli"
include = ["src/**/*", "LICENSE-MIT", "README.md"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon={version="1.5",optional = true}
itertools = "0.10"
compt = "2.0"
axgeom = {version="1.10",default-features = false}

[features]
default = ["rayon"]


[package.metadata.docs.rs]
# This sets the default target to `x86_64-unknown-linux-gnu`
# and only builds that target
targets = ["x86_64-unknown-linux-gnu"]

