[package]
name = "broccoli"
version = "6.2.3"
authors = ["Ken Reed <kenakioreed@gmail.com>"]
description = "broadphase collision detection algorithms"
license = "MIT"
repository = "https://github.com/tiby312/broccoli-project"
keywords = ["tree", "kdtree","broadphase","space-partitioning"]
readme = "../README.md"
edition = "2021"
include = ["src/**/*"]


[lib]
doctest = true

[dev-dependencies]
dists = {git="https://github.com/tiby312/dists.git"}

[dependencies]
compt = "2.1"
twounordered = "0.7"
slice-group-by = "0.3"
revec = "0.2"
axgeom = {version="1.12",default-features = false}


[package.metadata.docs.rs]
# This sets the default target to `x86_64-unknown-linux-gnu`
# and only builds that target
targets = ["x86_64-unknown-linux-gnu"]

#  when using flamegraph
# [profile.release]
# debug = true

