[package]
name = "demo"
version = "0.1.0"
authors = ["Ken Reed <kenakioreed@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
duckduckgeo ={git="https://github.com/tiby312/duckduckgeo"}
bit-vec = "0.6"
num_cpus = "1.10"
egaku2d = "0.5"
rayon = "1.5"

[dependencies.broccoli]
path = ".."

