[package]
name = "report_gen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
par-tuner={path="../par-tuner"}
layout={path="../layout"}
support={path="../support"}
colfind={path="../colfind"}
levels={path="../levels"}