[package]
name = "data_gen"
version = "0.1.0"
authors = ["Ken Reed <kenakioreed@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
gnuplot = "0.0.32"
num_cpus = "1.*"
rayon-core = "1.9"
dists={git="https://github.com/tiby312/dists.git"}
splot={path="../../../splot"}

[dependencies.broccoli]
path = "../.."
features = []

