[package]
name = "plot-gen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
par-tuner={path="../par-tuner"}
layout={path="../layout"}
support={path="../support"}
colfind={path="../colfind"}
levels={path="../levels"}
float-vs-integer={path="../float-vs-integer"}
rebal-vs-query={path="../rebal-vs-query"}
spiral={path="../spiral"}
cached-pairs={path="../cached-pairs"}
best-height={path="../best-height"}
pulldown-cmark = "0.9"
rayon="*"
affinity="*"