[package]
name = "support"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dists={git="https://github.com/tiby312/dists"}
broccoli={path="../../../broccoli"}
poloto={git="https://github.com/tiby312/poloto.git"}
once_cell="*"
indoc = "1.0.6"
hypermelon="*"